--- a/package.json
+++ b/package.json
@@ -2,11 +2,14 @@
   "name": "js-game-of-life",
   "version": "1.0.0",
   "description": "This project is part of my [Monthly Programming Language Challenge](https://github.com/ITregear/programming-language-challenge).",
-  "main": "index.js",
+  "main": "main.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "electron ."
   },
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "electron": "^29.3.0"
+  }
 }
